--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ a.subtle-link:hover {
     <div class="container">
         <h1><a href="https://x.com/_sonith" target="_blank">Sonith Sunku</a></h1>
 
-        <p>I live in California & New York.</p>
+        <p>I live in California.</p>
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
@@ -108,7 +108,7 @@ a.subtle-link:hover {
 
         <p>Guests include the founders of Palantir, Tinder, Sweetgreen, Notion; investors at Thrive Capital, Emergence, Dragonfly, A*, Semianalysis; and more.</p>
 
-        <p>I feel grateful, proud, and privileged to spend every day learning & working alongside people I admire, from all across the world.</p>
+        <p>I feel grateful, proud, and privileged to spend my time learning & working alongside people I admire, from all across the world.</p>
 
         <hr>
 
