--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ a.subtle-link:hover {
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We profile the life stories of individuals I'm curious about via recorded interviews and written biographies.</p>
+        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We profile the life stories of individuals across fields via recorded interviews and written biographies.</p>
 
         <p>Guests include the founders of Palantir, Tinder, Sweetgreen, Notion... investors at Thrive Capital, Emergence, Dragonfly, A*, Semianalysis.. and more.</p>
 
-        <p>I feel deep pride & privilege to learn alongside people I admire, from all across the world.</p>
+<!--         <p>I feel proud & privileged to learn alongside people I admire, from all across the world.</p> -->
 
         <hr>
 
