--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ a.subtle-link:hover {
 
         <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We profile the life stories of individuals across fields via recorded interviews and written biographies.</p>
         
-        <p>Guests range from the founders of Palantir, Tinder, and Sweetgreen to investors at Thrive Capital, Emergence, Dragonfly, Semianalysis, and more.</p>
+        <p>Guests range from the founders of Palantir, Tinder, and Sweetgreen to investors at Thrive Capital, Emergence, Dragonfly, Semianalysis and more.</p>
 
 <!--         <p>I feel deep gratitude & privilege to work alongside people I admire, from all across the world.</p> -->
 
