--- a/Essays/70.html
+++ b/Essays/70.html
@@ -136,7 +136,7 @@ a.subtle-link:hover {
         <a href="Essays.html" class="back-button">Back</a>
     </div>
 
-            <p>I believe that anyone can get what they want in the long run.</p>
+            <p>Anyone can get what they want in the long run.</p>
 
 <p>I’d peg this as analogous to Buffett’s long-only value investing framework. Good people (and businesses) compound meaningfully over time and accrue value accordingly. Whether this value is ascribed to capital, happiness, or any other metric doesn’t necessarily matter other than to the individual themself, and I believe that every individual can get what they want (and be willing to work for) in the long term.</p>
 
