--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ a.subtle-link:hover {
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a> where I interview the founders of Palantir, The Chainsmokers, Tinder, Sweetgreen, and more on their life story and my curiosities.</p>
+        <p>Recently, I started a <a class="subtle-link" href="https://youtube.com/@yesterdaypodcast" target="_blank">podcast</a> where I interview the founders of Palantir, The Chainsmokers, Tinder, Sweetgreen, and more on their life story and my curiosities.</p>
 
         <!-- We profile the life stories of individuals across fields via recorded interviews and written biographies
         <p>Guests range from the founders of Palantir, Tinder, and Sweetgreen to investors at Thrive Capital, Emergence, Dragonfly, Semianalysis and more.</p> -->
