--- a/Publishings/Publishings.html
+++ b/Publishings/Publishings.html
@@ -126,6 +126,7 @@ a.subtle-link:hover {
             <li>Shoe Dog (Phil Knight)</li>
             <li>Keep Your Identity Small (Paul Graham)</li>
             <li>You Could Just Choose Optimism (Carter Mark and Jordan Gonen)</li>
+            <li>Who Is Michael Ovitz? (Michael Ovitz)</li>
         </ul>
 
             
