--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ a.subtle-link:hover {
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>I also host a <a class="subtle-link" href="https://open.spotify.com/show/1ik8nyzHZPHHGAiE2LiBtV?si=9f63316dee0645d2" target="_blank">podcast</a> to interview people I'm curious about, like the founders of Palantir, Sweetgreen, The Chainsmokers and more.</p>
+        <p>On the side, I also host a <a class="subtle-link" href="https://open.spotify.com/show/1ik8nyzHZPHHGAiE2LiBtV?si=9f63316dee0645d2" target="_blank">podcast</a> to interview people I'm curious about, like the founders of Palantir, Sweetgreen, The Chainsmokers and more.</p>
 
         <!-- We profile the life stories of individuals across fields via recorded interviews and written biographies
         <p>Guests range from the founders of Palantir, Tinder, and Sweetgreen to investors at Thrive Capital, Emergence, Dragonfly, Semianalysis and more.</p> -->
